# queueboard-core

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  Infra robustness ideas.md  README.md  assign_data.sh  assign_stats.sh  backfill.sh  basic-pr-info.graphql  basic_pr_info.graphql  basic_pr_info.sh  broken_pr_data.txt  check_data_integrity.py  ci_status.py  classify_pr_state.py  compute_dashboard_prs.py  dashboard.html  dashboard.py  dashboard.sh  dependency_dashboard.html  dependency_graph.py  docs.md  download_missing_outdated_PRs.sh  gather_stats.sh  generate_assigment_page.py  generate_assigment_stats.py  mathlib_dashboards.py  missing-prs-on-the-queue.html  pr_info.graphql  pr_info.sh  pr_query.graphql  pr_reactions.sh  process.py  pyproject.toml  requirements.txt  reviewer-topics.json  state_evolution.py  style.css  suggest_reviewer.py  suggested_assignments.json  (+2 more)
.github/: dependabot.yml
docs/: FAQ_pr_state_classification.md  Infra robustness ideas.md  Overview.md  Workflow ordering and design.md
queries/: basic_pr_info.graphql  pr_reactions.graphql
queueboard/: check_data_integrity.py  ci_status.py  classify_pr_state.py  compute_dashboard_prs.py  dashboard.py  dashboard_data.py  generate_assigment_page.py  mathlib_dashboards.py  send-zulip-dm.py
scripts/: backfill.sh  basic_pr_info.sh  dashboard.sh  download_missing_outdated_PRs.sh  gather_stats.sh  merge_paginated_timeline.py  pr_info.sh  pr_reactions.sh
static/: style.css
test/: 6057-raw-paginated.json  aggregate_info.json  all-draft-PRs.json  all-nondraft-PRs.json  delegated.json  help-wanted.json  (+7 more)
(+21 files in other folders)
