[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "queueboard-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "zulip>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/queueboard"]

[tool.hatch.build]
include = [
  "src/queueboard/**/*.py",
  "src/queueboard/graphql/**/*",
  "src/queueboard/static/**/*",
]
